# audiobeat-octapro-8-2-reverse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT_USER.md  FINDINGS_DAT.md  FINDINGS_EXE.md  FINDINGS_MANUAL_GAP.md  FINDINGS_WIRESHARK.md  LICENSE  PROTOCOL.md  README.md  pyproject.toml  usb1.pcapng  usb2.pcapng
.github/workflows/: ci.yml  release.yml
scripts/: catalog_pcap_commands.py  pair_pcap_requests_responses.py
src/octapro/: __init__.py  __main__.py  _version.py  cli.py  errors.py  logging.py
src/octapro/commands/: dat.py  decode_pcap.py  dump.py  info.py  monitor.py  probe.py  read.py  write.py
src/octapro/protocol/: channel.py  constants.py  dat.py  eq.py  gain.py  packet.py  routing.py
src/octapro/transport/: hid.py
tests/: conftest.py  test_channel.py  test_dat.py  test_eq.py  test_gain.py  test_packet.py
