[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "octapro"
dynamic = ["version"]
description = "USB HID CLI for the Audiobeat OctaPro 8.2 / SP601 Car DSP Amplifier"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "hid>=0.14.0",
    "pefile>=2024.8.26",
    "scapy>=2.7.0",
    "capstone>=5.0.7",
]

[project.scripts]
octaproctl = "octapro.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.9",
    "ruff>=0.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/octapro/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/LICENSE", "/README.md"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # typer.Option() calls in function defaults

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
